Adding Menu Bar - Three blank  HTML pages and fade in animation to list

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
 <ul class = "menu">
-    <li> Our Story </li>
-    <li> Products </li>
-    <li> Contact </li> 
+    <li class = "fade-in one"><a href="story.html"> Our Story </a></li>
+    <li class = "fade-in two"><a href="products.html"> Product </a></li>
+    <li class = "fade-in three"><a href="contact.html"> Contact  </a></li> 
 <ul>
 
 <div class = "title_center">
