Updating index.html with positioning/address. Adding Form code to contact.html

--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
 
 <ul class = "menu">
     <li class = "fade-in one"><a href="story.html"> Our Story </a></li>
-    <li class = "fade-in two"><a href="products.html"> Product </a></li>
+    <li class = "fade-in two"><a href="products.html"> Products </a></li>
     <li class = "fade-in three"><a href="contact.html"> Contact  </a></li> 
-<ul>
+</ul>
 
 <div class = "title_center">
 <h1>Maguire's Foods Ltd</h1>
-
-
 </div>
+<div class = "address">
+    <h3>10 Cahore, Ederney Co. Fermanagh BT93 0AL United Kingdom</h3>
+</div>
+
+<footer class="clear">
+        &copy; Copyright 2019 James Maguire
+</footer>
 </body>
 </html>
