Adding Test Image

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+    <div class = "img_position">
+        <img src = "FruitVeg.png"> </img>
+    </div>
+
 <ul class = "menu">
     <li class = "fade-in one"><a href="story.html"> Our Story </a></li>
     <li class = "fade-in two"><a href="products.html"> Products </a></li>
