Stephen Kennedy Home Improvements - CSS Clean and now scales with page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class = "img_position">
-        <img src = "FruitVeg.png"> </img>
+        <img src = "FruitVeg.png" style="height: 200px;"> </img>
     </div>
 
 <ul class = "menu">
@@ -22,8 +22,15 @@
 <div class = "title_center">
 <h1>Maguire's Foods Ltd</h1>
 </div>
+<ul class = "statements" style ="display: inline-block">
+        <li> Family </li>
+        <li> Local </li>
+        <li> Fresh </li> 
+</ul>
+
+
 <div class = "address">
-    <h3>10 Cahore, Ederney Co. Fermanagh BT93 0AL United Kingdom</h3>
+    <h3 style="display: inline-block;">10 Cahore, Ederney Co. Fermanagh BT93 0AL United Kingdom</h3>
 </div>
 
 <footer class="clear">
