--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel = "stylesheet" type="text/css" href="index.css"> 
-    <title>Document</title>
+    <title>Maguire's Foods</title>
 </head>
 <body>
       <div class = "div_form">
